--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        //noinspection DataBindingWithoutKapt
         dataBinding = true
         viewBinding = true
     }
@@ -48,14 +49,14 @@ android {
 dependencies {
     apply plugin: 'kotlin-kapt'
     //implementation "org.alicebot.*"
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.material:material:1.5.0'
     //implementation 'me.himanshusoni.chatmessageview:chat-message-view:1.0.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'io.getstream:stream-chat-android-client:4.26.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'androidx.room:room-runtime:2.4.0'
-    annotationProcessor 'androidx.room:room-compiler:2.4.0'
+    implementation 'androidx.room:room-runtime:2.4.1'
+    annotationProcessor 'androidx.room:room-compiler:2.4.1'
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     // Import the Firebase BoM
