--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.10"
     implementation("com.android.volley:volley:1.2.1")
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "com.google.truth:truth:1.0.1"
+    androidTestImplementation "com.google.truth:truth:1.0.1"
     //implementation "org.jetbrains.anko:anko-commons:$anko_version"
     //testImplementation 'junit:junit:4.13.12'
     //apt 'com.jakewharton:butterknife-compiler:8.0.1'
