--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,7 +106,7 @@
         <activity
             android:name=".activity.HomeActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/home_activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
